# qemu-gui-apk

./: AudioBridge.cpp  CMakeLists.txt  DisplayBridge.cpp  EmuSurfaceView.java  MainActivity.java  QemuGui.cpp  QemuNative.java  QemuWrapper.cpp  QemuWrapper.h  README.md  TerminalView.java  UntarXz.cpp  UntarXzJNI.cpp  Utils.java  VmManager.cpp  activity_main.xml
